# EvolutiveX-Agent-Orchestrator

./: .editorconfig  .gitignore  .gitlab-ci.yml  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  active-issues.md  eslint.config.mjs  package-lock.json  package.json  temp_read_marker.ts  tsconfig.json  tts-sidecar.sha256  verify-report.json
.circleci/: config-linux-amd64.yml  config-linux.yml  config-macos-amd64.yml  config-macos.yml  config-windows-amd64.yml  config-windows.yml  config.yml
.claude/: CLAUDE.md  settings.json  settings.local.json
.workbench/: explorer.done
configs/: .env.example  anthropic-model-pricing.json  eslint.config.mjs  hooks.json  tsconfig.json  vitest.config.ts
containerization/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md
docs/: Proposal.md  advanced-configuration.md  analisis-context-sync-miss-9810c57a.md  context-sync-cache.md  dockerization.md  gateway-architecture.md  health-check-handling.md  how-sse-reconstruction-works.md  how-to-calculate-anthropic-api-costs.md  how-to-calculate-openrouter-api-costs.md  how-to-start.md  notifications.md  observability.md  openspec-claude-code.md  router-statusline.md  session-audit-model.md  session-metrics-system.md  specification-delta-workflow.md  tts-sidecar-build.md
hooks/: webfetch-event.mjs
openspec/: config.yaml
scripting/: apply-sequential-openspec-schema.mts  clean-modules-repro.ts  clean-modules.ts  clean-windows-env.ts  configure-provider.ts  create-agents-reference.ts  detached-session-end-relay.ts  (+20 more)
sidecar/: Cargo.toml
sidecar/src/: main.rs
(+1488 files in other folders)
