[package]
name = "tts-sidecar"
version = "0.1.0"
edition = "2021"
description = "Sidecar de síntesis de voz TTS basado en sherpa-onnx y CPAL para el proxy de Claude Code"
license = "MIT"

[[bin]]
name = "tts-sidecar"
path = "src/main.rs"

[dependencies]
sherpa-onnx = "1"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
